// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`created user should NOT be active 1`] = `
Object {
  "active": false,
  "cabinet": null,
  "created_at": Any<Object>,
  "email": "toto@toto.com",
  "id": 10,
  "last_login": null,
  "nom": "testAd",
  "password": Any<String>,
  "prenom": "testPrenom",
  "reset_password_expires": null,
  "reset_password_token": null,
  "service_id": null,
  "type": "individuel",
  "username": "toto",
}
`;

exports[`should add mandataire tis 1`] = `
Object {
  "message": "knex is not a function",
  "name": "TypeError",
  "stack": "TypeError: knex is not a function
    at knex (/Users/christophedumont/Workspace/emjpm/packages/api/db/queries/users.js:23:3)
    at getCountByEmail (/Users/christophedumont/Workspace/emjpm/packages/api/routes/inscription.js:224:31)
    at Layer.handle [as handle_request] (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/layer.js:95:5)
    at next (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/route.js:137:13)
    at Route.dispatch (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/route.js:112:3)
    at Layer.handle [as handle_request] (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/layer.js:95:5)
    at /Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:281:22
    at Function.process_params (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:335:12)
    at next (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:275:10)
    at Function.handle (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:174:3)
    at router (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:47:12)
    at Layer.handle [as handle_request] (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:317:13)
    at /Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:284:7
    at Function.process_params (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:335:12)
    at next (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:275:10)
    at initialize (/Users/christophedumont/Workspace/emjpm/node_modules/passport/lib/middleware/initialize.js:53:5)
    at Layer.handle [as handle_request] (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:317:13)
    at /Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:284:7
    at Function.process_params (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:335:12)
    at next (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:275:10)
    at urlencodedParser (/Users/christophedumont/Workspace/emjpm/node_modules/body-parser/lib/types/urlencoded.js:82:7)
    at Layer.handle [as handle_request] (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:317:13)
    at /Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:284:7
    at Function.process_params (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:335:12)
    at next (/Users/christophedumont/Workspace/emjpm/node_modules/express/lib/router/index.js:275:10)
    at /Users/christophedumont/Workspace/emjpm/node_modules/body-parser/lib/read.js:130:5
    at invokeCallback (/Users/christophedumont/Workspace/emjpm/node_modules/raw-body/index.js:224:16)
    at done (/Users/christophedumont/Workspace/emjpm/node_modules/raw-body/index.js:213:7)
    at IncomingMessage.onEnd (/Users/christophedumont/Workspace/emjpm/node_modules/raw-body/index.js:273:7)
    at IncomingMessage.emit (events.js:188:13)
    at IncomingMessage.EventEmitter.emit (domain.js:441:20)
    at endReadableNT (_stream_readable.js:1129:12)
    at process.internalTickCallback (internal/process/next_tick.js:72:19)",
}
`;

exports[`should add mandataire tis 2`] = `
Array [
  Object {
    "from": "ne-pas-repondre@emjpm.gouv.fr",
    "html": "
Bonjour la super team eMJPM :),<br />
Nous avons reçu une nouvelle inscription de testPrenom testAd , toto@toto.com , 75010, <br />

agrée sur TI(s): ti arras, ti paris. <br />

Merci de vérifier cette nouvelle demande et de la valider.
<br /><br />
Bonne journée :)
",
    "subject": "Nouvelle inscription",
    "text": "
Bonjour la super team emjpm :) ,

Nous avons reçu une nouvelle inscription de testPrenom testAd , toto@toto.com , 75010,
agrée sur TI: ti arras, ti paris / qui exerce sur TI: ti arras, ti paris.

agrée sur TI(s): ti arras, ti paris.

Merci de vérifier cette nouvelle demande et de la valider.

Bonne journée :)
",
    "to": "contact@emjpm.beta.gouv.fr",
  },
]
`;

exports[`should add user tis 2`] = `
Array [
  Object {
    "from": "ne-pas-repondre@emjpm.gouv.fr",
    "html": "
Bonjour la super team eMJPM :),<br />
Nous avons reçu une nouvelle inscription de testPrenom testAd , toto@toto.com , null, <br />

qui exerce sur le TI: ti arras. <br />

Merci de vérifier cette nouvelle demande et de la valider.
<br /><br />
Bonne journée :)
",
    "subject": "Nouvelle inscription",
    "text": "
Bonjour la super team emjpm :) ,

Nous avons reçu une nouvelle inscription de testPrenom testAd , toto@toto.com , null,
agrée sur TI: ti arras / qui exerce sur TI: ti arras.

qui exerce sur le TI: ti arras.

Merci de vérifier cette nouvelle demande et de la valider.

Bonne journée :)
",
    "to": "contact@emjpm.beta.gouv.fr",
  },
]
`;

exports[`should send an email with good values 1`] = `
Array [
  Object {
    "from": "ne-pas-repondre@emjpm.gouv.fr",
    "html": "
Bonjour la super team eMJPM :),<br />
Nous avons reçu une nouvelle inscription de testPrenom testAd , toto@toto.com , 75010, <br />

agrée sur TI(s): Pas de Ti sélectionné. <br />

Merci de vérifier cette nouvelle demande et de la valider.
<br /><br />
Bonne journée :)
",
    "subject": "Nouvelle inscription",
    "text": "
Bonjour la super team emjpm :) ,

Nous avons reçu une nouvelle inscription de testPrenom testAd , toto@toto.com , 75010,
agrée sur TI: undefined / qui exerce sur TI: undefined.

agrée sur TI(s): Pas de Ti sélectionné.

Merci de vérifier cette nouvelle demande et de la valider.

Bonne journée :)
",
    "to": "contact@emjpm.beta.gouv.fr",
  },
]
`;
